WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205332
CacheStorageEngine should not clear caches memory representation for ephemeral sessions
https://bugs.webkit.org/show_bug.cgi?id=205332
Summary
CacheStorageEngine should not clear caches memory representation for ephemera...
youenn fablet
Reported
2019-12-17 03:43:09 PST
CacheStorageEngine should not clear caches memory representation for ephemeral sessions
Attachments
Patch
(2.92 KB, patch)
2019-12-17 03:47 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2019-12-17 03:47:57 PST
Created
attachment 385876
[details]
Patch
youenn fablet
Comment 2
2019-12-19 00:19:20 PST
Ping review
WebKit Commit Bot
Comment 3
2019-12-19 10:37:03 PST
Comment on
attachment 385876
[details]
Patch Clearing flags on attachment: 385876 Committed
r253767
: <
https://trac.webkit.org/changeset/253767
>
WebKit Commit Bot
Comment 4
2019-12-19 10:37:05 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-12-19 10:38:20 PST
<
rdar://problem/58084059
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug