CacheStorageEngine should not clear caches memory representation for ephemeral sessions https://bugs.webkit.org/show_bug.cgi?id=205332

Reviewed by Chris Dumez.

Source/WebKit:

* NetworkProcess/cache/CacheStorageEngineCaches.cpp:
(WebKit::CacheStorage::Caches::dispose):
We cannot dispose an ephemeral cache memory representation
since it can be reopened by a page with the same session.

LayoutTests:

* TestExpectations:


Canonical link: https://commits.webkit.org/218656@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253767 268f45cc-cd09-0410-ab3c-d52691b4dbfc